--- a/views/user.ejs
+++ b/views/user.ejs
@@ -1,7 +1,7 @@
 <% include partials/header.ejs %>
 
 <h1><%= title %></h1>
-  <p>Welcome to <%= title %></p>
+  <p>Welcome users <%= name %></p>
   
   <% include partials/footer.ejs %>
   
