--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,14 @@
-<% include partials/header.ejs %>
+<%- include partials/header.ejs %>
 
-<h1><%= title %></h1>
-  <p>Welcome to <%= title %></p>
-  
-  <% include partials/footer.ejs %>
-  
+<%- include partials/main_nav.ejs %>
+
+<!--Display Error-->
+<div class="container">
+    <h1><%= message %></h1>
+    <h2><%= error.status %></h2>
+    <pre><%= error.stack %></pre>
+</div>
+
+<%- include partials/bottom_nav.ejs %>
+
+<%- include partials/footer.ejs %>
